tests/neg-custom-args/captures/scoped-caps.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:7:20 -----------------------------------
7 |  val g: A^ -> B^ = f // error
  |                    ^
  |                 Found:    (f : (x: A^) -> B^²)
  |                 Required: A^ -> B^³
  |
  |                 Note that capability any is not included in capture set {any²}
  |                 because any is not visible from any² in value g.
  |
  |                 where:    ^ and any   refer to the universal root capability
  |                           ^²          refers to a root capability associated with the result type of (x: A^): B^²
  |                           ^³ and any² refer to a root capability in the type of value g
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:9:25 -----------------------------------
9 |  val _: (x: A^) -> B^ = g // error
  |                         ^
  |                   Found:    A^ -> B^{g*}
  |                   Required: (x: A^) -> B^²
  |
  |                   Note that capability g* is not included in capture set {any}.
  |
  |                   where:    ^ and any refer to the universal root capability
  |                             ^²        refers to a root capability associated with the result type of (x: A^): B^²
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:10:20 ----------------------------------
10 |  val _: A^ -> B^ = f // error
   |                    ^
   |               Found:    (f : (x: A^) -> B^²)
   |               Required: A^ -> B^³
   |
   |               Note that capability any is not included in capture set {any²}
   |               because any is not visible from any² in value _$3.
   |
   |               where:    ^ and any   refer to the universal root capability
   |                         ^²          refers to a root capability associated with the result type of (x: A^): B^²
   |                         ^³ and any² refer to a root capability in the type of value _$3
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:12:20 ----------------------------------
12 |  val _: A^ -> B^ = x => g(x)      // error: g is no longer pure, since it contains the ^ of B
   |                    ^^^^^^^^^
   |                Found:    (x: A^) ->'s1 B^²
   |                Required: A^ -> B^³
   |
   |                Note that capability any is not included in capture set {any²}
   |                because any is not visible from any² in value _$5.
   |
   |                where:    ^           refers to the universal root capability
   |                          ^² and any  refer to a root capability associated with the result type of (x: A^): B^²
   |                          ^³ and any² refer to a root capability in the type of value _$5
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:16:24 ----------------------------------
16 |  val _: (x: S) -> B^ = h          // error: direct conversion fails
   |                        ^
   |                 Found:    S^ -> B^{h*}
   |                 Required: (x: S^) -> B^²
   |
   |                 Note that capability h* is not included in capture set {any}.
   |
   |                 where:    ^ and any refer to the universal root capability
   |                           ^²        refers to a root capability associated with the result type of (x: S^): B^²
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:26:19 ----------------------------------
26 |  val _: S -> B^ = j               // error
   |                   ^
   |               Found:    (j : (x: S) -> B^)
   |               Required: S^² -> B^³
   |
   |               Note that capability any is not included in capture set {any²}
   |               because any is not visible from any² in value _$13.
   |
   |               where:    ^           refers to a root capability associated with the result type of (x: S^²): B^
   |                         ^² and any  refer to the universal root capability
   |                         ^³ and any² refer to a root capability in the type of value _$13
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps.scala:27:25 ----------------------------------
27 |  val _: S -> B^ = x => j(x)       // error
   |                        ^^^^
   |Found:    B^
   |Required: B^²
   |
   |Note that capability any is not included in capture set {any²}
   |because any in an enclosing function is not visible from any² in value _$14.
   |
   |where:    ^ and any   refer to a root capability created in anonymous function of type (x: S): B^³ when instantiating method apply's type (x: S^³): B^⁴
   |          ^² and any² refer to a root capability in the type of value _$14
   |
   | longer explanation available when compiling with `-explain`
